Corrected comments
